Added static file templatetag and also included teh players.js file

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
 
 .myClass3 {padding: 50px;border: 1px solid blue;display: inline-block;position: absolute;left: 0px; bottom: 0px;}		
 	</style>
+    {% load static %}
+    <script src="{% static 'js/player.js' %}"></script>
 </head>
 <body>
 	<h1>GLS Fullstack Exercise</h1>
