--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 
 .myClass3 {padding: 50px;border: 1px solid blue;display: inline-block;position: absolute;left: 0px; bottom: 0px;}		
 	</style>
+{#Loaded tooltip css and creat a global variable to load data from json file#}
     {% load static %}
 <link rel="stylesheet" href="{% static 'css/tooltip.css' %}">
 <script>
